# riccati

./: .gitignore  CMakeLists.txt
include/ricatti/: chebyshev.hpp  evolve.hpp  step.hpp  stepsize.hpp  utils.hpp
include/riccati/: arena_matrix.hpp  chebyshev.hpp  evolve.hpp  macros.hpp  memory.hpp  solver.hpp  step.hpp  stepsize.hpp  utils.hpp
riccati/: __init__.py  _version.py  chebutils.py  evolve.py  solversetup.py  step.py  stepsize.py
riccati/tests/: CMakeLists.txt  test_riccati.py
riccati/tests/cpp/: chebyshev_test.cpp  evolve_test.cpp  solverinfo_test.cpp  step_test.cpp  stepsize_test.cpp  utils.hpp
